Removed duplicated error messages with css

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -39,6 +39,10 @@ ul > li {
   color: #c02f1d;
 }
 
+.shiny-output-error-hidden {
+  visibility: hidden;
+}
+
 .help, .measures, .header {
   font-size: 16px;
 }
